<resources>
    <string name="app_name">Smart Slim Timer</string>
    <string name="add_2_half">2.5 hours</string>
    <string name="add_3">3 hours</string>
    <string name="add_3_half">3.5 hours</string>
    <string name="zero_time">0:00:00</string>
    <string name="pause">PAUSE</string>
    <string name="restart">RESTART</string>
    <string name="btn_add15min">+15m</string>
    <string name="btn_deduct15min">-15m</string>
    <string name="choose_time_label">Choose time until next meal based on how much you just ate</string>
    <string name="recommended_explanation_label">These are the recommended times between meals</string>
    <string name="general_explanation_label">Use this timer to help you know when you should eat next to keep a steady blood sugar levels</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
